# dprint-plugin-package-json

./: Cargo.toml
src/: configuration.rs  format_text.rs  lib.rs  wasm_plugin.rs
src/fixtures/: order-expected.json  order.json
