[package]
name = "dprint-plugin-package-json"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[dependencies]
anyhow = "1.0.64"
dprint-core = { version = "0.67.0", features = ["formatting"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
